--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css"
+    />
+    <title>Chipamall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
